<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_range"
            android:textSize="@dimen/label_font"/>

        <EditText
            android:id="@+id/input_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_min"
            android:textSize="@dimen/display_font" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_to"
            android:textSize="@dimen/label_font"/>

        <EditText
            android:id="@+id/input_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_max"
            android:textSize="@dimen/display_font" />

        <Button
            android:onClick="buildTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_label_submit"
            android:textSize="@dimen/label_font"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_column"
            android:textSize="@dimen/label_font"/>

        <Space
            android:layout_width="@dimen/space_width"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/display_font"
            android:text="@string/label_nsquared"/>
        <CheckBox
            android:id="@+id/n_squared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ncubed"
            android:textSize="@dimen/display_font"/>
        <CheckBox
            android:id="@+id/n_cubed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nroot"
            android:textSize="@dimen/display_font"/>
        <CheckBox
            android:id="@+id/n_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nfactorial"
            android:textSize="@dimen/display_font"/>
        <CheckBox
            android:id="@+id/n_factorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding = "@dimen/padding">

        </TableLayout>
    </ScrollView>

</LinearLayout>